pre no longer wraps lines

--- a/base.less
+++ b/base.less
@@ -410,7 +410,7 @@ html {
 }
 
 pre {
-  white-space:pre-wrap;
+  white-space:nowrap;
 }
 
 .collapsible-block {
